# wayland-protocols

./: CMakeLists.txt  README.md
dumped/emulator-1.2.0/: webos.xml
dumped/emulator-2.0.0/: starfish.xml
dumped/tv-3.9.2/: webos.xml
dumped/tv-4.4.2/: webos.xml
extractor/: CMakeLists.txt  interfaces.c  interfaces.h  main.c  output.c  output.h
protocols/: proto-merger.py  webos.xml
protocols/dumped/tv-1.4.0/: webos.xml
protocols/dumped/tv-5.3.1/: webos.xml
protocols/dumped/tv-6.4.0/: starfish.xml  webos.xml
protocols/dumped/tv-8.0.0/: webos.xml
protocols/dumped/tv-8.3.0/: webos.xml
protocols/dumped/tv-9.2.0/: webos.xml
protocols/merged/emulator-1.2.0/: webos-shell.xml
protocols/merged/emulator-2.0.0/: text.xml
protocols/merged/emulator-3.0.0/: input-method.xml
protocols/merged/tv-1.2.0/: input-method.xml  webos-shell.xml
protocols/merged/tv-1.4.0/: text.xml  webos-shell.xml  webos-surface-group.xml
protocols/merged/tv-2.2.3/: input-method.xml  webos-shell.xml  webos-surface-group.xml
protocols/merged/tv-3.4.0/: input-method.xml  text.xml  webos-input-manager.xml  webos-surface-group.xml
protocols/merged/tv-3.9.2/: text.xml  webos-surface-group.xml
protocols/merged/tv-4.4.2/: text.xml  webos-input-manager.xml
protocols/merged/tv-4.9.7/: input-method.xml  text.xml  webos-shell.xml
protocols/merged/tv-5.3.1/: input-method.xml  webos-extension.xml  webos-shell.xml
protocols/merged/tv-6.2.0/: webos-input-manager.xml  webos-shell.xml
protocols/merged/tv-6.4.0/: input-method.xml
protocols/templates/: webos-shell.xml
sample/: CMakeLists.txt  wayland_compat.c  wayland_egl.c
(+9 files in other folders)
